fix font on safari issue.

--- a/components/useCaseGenerics/sectionTopper.module.css
+++ b/components/useCaseGenerics/sectionTopper.module.css
@@ -19,7 +19,7 @@
 
 .sectionTitle {
     color: var(--light-text, #D5DCF4);
-    font-family: var(--font-fam-round);
+    font-family: var(--font-fam-round, sans-serif);
     font-size: var(--body-text);
     font-style: normal;
     font-weight: 400;
